Bug 1313612, enable named pipe proxy support in NSPR, landing WITHOUT review, because parts of it have already been released with Firefox 52 :-( :-(